--- a/LotRRealmsInExileDev/localization/english/lotr_mottos_l_english.yml
+++ b/LotRRealmsInExileDev/localization/english/lotr_mottos_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
  dynn_eorlings_motto:0 "Forth, and fear no darkness!"
  dynn_frecalings_motto:0 "The wolf stands at the western door."
- dynn_istari_motto:0 "Do not meddle in the affairs of wizards, for they are subtle and quick to anger."
+ dynn_istari_motto:0 "Do not meddle in the affairs of wizards."
+ dynn_isildur_motto:0 "We will abide unto the ending of the world."
