Blood of Numenor Traits
-Added both a "Blood of Numenor" and "Traces of Numenorean Blood" trait

--- a/LotRRealmsInExileDev/localization/english/culture/lotr_cultures_l_english.yml
+++ b/LotRRealmsInExileDev/localization/english/culture/lotr_cultures_l_english.yml
@@ -24,6 +24,9 @@
  numenorean_collective_noun:0 "Númenórean"
  dunedain:0 "Dúnedain"
  dunedain_collective_noun:0 "Dúnedain"
+ dynnpat_suf_ion:0 "ion"
+ dynnpat_suf_iel:0 "iel"
+ dynnp_an:0 "an"
  belfalathrim:0 "Belfalathrim"
  belfalathrim_collective_noun:0 "Belfalathrim"
  black_numenorean_group:0 "Black Númenórean"
